# stocklerts

./: .gitignore  Dockerfile  Dockerfile.webhook  LICENSE  README.md  compose.yaml  config.yaml  fly.toml  pyproject.toml  test_persistence.db  update.sh  webhook_handler.py  webhook_handler_reqs.txt
.github/workflows/: docker-publish.yml
app/: api_server.py  constants.py  health_server.py  main.py
app/alerts/: notifier.py
app/database/: db_manager.py
app/helpers/: gemini_helpers.py  plex_helpers.py  sheets_helpers.py  stock_helpers.py
app/price_tracking/: tracker.py
app/recommendations/: daily_recommender.py
app/scheduler/: job_scheduler.py
app/schemas/: prompt_schemas.py
app/services/: daily_recommender_service.py  improve_prompt_service.py  price_tracker_service.py
app/utils/: basic.py  crypto.py  helper.py  parsing.py  rate_limiter.py
resources/: best_daily_performers.csv  best_performers_prompt.txt  daily_performance.csv  daily_prompt.txt  improve_prompt.txt
tests/: README.md  pytest.ini  requirements-test.txt  run_tests.py  test_ai_helpers.py  test_api_server.py  test_daily_recommender_service.py  test_db_manager.py  test_health.py  test_improve_prompt_service.py  test_job_scheduler.py  test_notifier.py  test_perplexity_integration.py  test_price_tracker_service.py  test_recommender.py  test_schemas.py  test_sheets_helpers.py  test_tracker.py  test_utils.py
