[project]
name = "stocklerts"
version = "0.1.0"
description = "A stock price alert tracker that notifies users based on price changes."
authors = [
    { name = "Vinay Kudari", email = "vinay.kudari30@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "finnhub-python>=2.4.20",
    "APScheduler>=3.9.1",
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "SQLAlchemy>=2",
    "python-dotenv>=1.0.0",
    "cryptography>=43.0.1",
    "pytz>=2024.1",
    "gspread>=6.0.2",
    "watchdog>=6.0.0",
    "google-genai>=1.25.0",
    "pytest-mock>=3.14.1",
    "pytest>=8.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
